syntax = "proto3";

option csharp_namespace = "ArticleService.Rpc.Protos";

package sunnyblog;

//定义服务
service gUser{
	//根据ID查询用户信息
	rpc GetUserByID(UserInfoRequest) returns (UserInfoResponse);
}

message UserInfoRequest{
	int32 Id = 1;
}
message UserInfoResponse{
	int32 Id = 1;
	string Username = 2;
	string Nick = 3;
	string Photo = 4;
}